kubernetes/apps/observability/victoria/logs/httpRoute.yaml
---
# yaml-language-server: $schema=https://schemas.mortebrume.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
spec:
  hostnames:
    - logs.mortebrume.eu
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: vlsingle-vl
          namespace: observability
          port: 9428
